--- a/p/placeholder-text/index.html
+++ b/p/placeholder-text/index.html
@@ -13,6 +13,8 @@
 <meta name="twitter:title" content="Placeholder Text">
 <meta name="twitter:description" content="Lorem Ipsum Dolor Si Amet"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://kkfreedom.github.io/p/placeholder-text/matt-le-SJSpo9hQf7s-unsplash.jpg' />
+    <link rel="shortcut icon" href="icon/favicon.ico" />
+
     </head>
     <body class="
     article-page has-toc
