--- a/search/index.html
+++ b/search/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh-cn">
     <head><meta charset='utf-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content=''><title>Search</title>
 
@@ -39,7 +39,7 @@
     })();
 </script>
 <div class="container main-container flex on-phone--column extended"><aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -211,7 +211,7 @@
 
 
 
-                <span>Dark Mode</span>
+                <span>暗色模式</span>
             </li>
         
     </ol>
@@ -219,11 +219,11 @@
 <main class="main full-width">
 <form action="https://kkfreedom.github.io/search/" class="search-form"data-json="https://kkfreedom.github.io/search/index.json">
     <p>
-        <label>Search</label>
-        <input name="keyword" placeholder="Type something..." />
+        <label>搜索</label>
+        <input name="keyword" placeholder="输入关键词..." />
     </p>
 
-    <button title="Search">
+    <button title="搜索">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
   <path stroke="none" d="M0 0h24v24H0z"/>
   <circle cx="10" cy="10" r="7" />
@@ -239,7 +239,7 @@
 <div class="search-result--list article-list--compact"></div>
 
 <script>
-    window.searchResultTitleTemplate = "#PAGES_COUNT pages (#TIME_SECONDS seconds)"
+    window.searchResultTitleTemplate = "#PAGES_COUNT 个结果 （用时 #TIME_SECONDS 秒）"
 </script><script type="text/javascript" src="/ts/search.js" defer></script>
 
 <footer class="site-footer">
